# cpp_quick

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: main.cpp
test/: test_main.cpp
